@@ -1,0 +1,293 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
+    <string name="app_name">TeamTalk</string>
+    <string name="title_activity_server_list">TeamTalk 5 Servers</string>
+    <string name="action_settings">Pengaturan</string>
+    <string name="action_exit">Keluar</string>
+    <string name="title_activity_server_entry">TeamTalk 5 Server Properti</string>
+    <string name="title_activity_main">TeamTalk 5 for Android</string>
+    <string name="title_section_channels">Saluran</string>
+    <string name="title_section_chat">Obrolan</string>
+    <string name="title_section_media">Media Streams</string>
+    <string name="title_section_files">Files</string>
+    <string name="title_activity_channel_prop">Properti Saluran</string>
+    <string name="title_activity_user_prop">Properti Pengguna</string>
+    <string name="title_activity_text_message">Pesan Teks</string>
+    <string name="title_activity_preferences">Preferensi</string>
+    <string name="action_createchannel">Buat</string>
+    <string name="action_updatechannel">Perbaharui</string>
+    <string name="text_con_failed">Gagal terhubung ke server. Mencoba kembali...</string>
+    <string name="text_con_lost">Kehilangan koneksi ke server</string>
+    <string name="text_con_success">Terhubung ke server</string>
+    <string name="text_con_cmderr">Gagal untuk mengeluarkan perintah</string>
+    <string name="text_cmderr_login">Gagal untuk mengeluarkan perintah masuk</string>
+    <string name="text_cmd_loggedin">masuk ke server</string>
+    <string name="text_cmd_joinchan">Bergabung dengan saluran:</string>
+    <string name="text_cmd_leftchan">Meninggalkan saluran:</string>
+    <string name="text_cmd_joinroot">Bergabung dengan saluran utama</string>
+    <string name="text_cmd_leftroot">meninggalkan saluran utama</string>
+    <string name="text_cmd_userjoinchan">gabung saluran</string>
+    <string name="text_cmd_userleftchan">tinggalkan saluran</string>
+    <string name="text_cmd_servername">Nama Server: </string>
+    <string name="text_cmd_servermotd">Pesan hari ini: </string>
+    <string name="pref_cat_subscriptions">Langganan</string>
+    <string name="pref_cat_tts">konfigurasikan suara pembaca pesan</string>
+    <string name="pref_cat_soundtest">Uji Suara</string>
+    <string name="pref_header_general">Umum</string>
+    <string name="pref_title_nickname">Nama Panggilan</string>
+    <string name="pref_default_nickname">TanpaNama</string>
+    <string name="pref_title_keep_screen_on">Layar tetap menyala ketika terhubung</string>
+    <string name="pref_title_vibrate">bergetar jika tombol PTT ditekan</string>
+    <string name="pref_show_log_messages">Tampilkan log di dalam riwayat pesan</string>
+    <string name="pref_title_audio_icons">Suara Tindakan</string>
+    <string name="pref_title_rx_tx_audio_icon">Suara transmisi toggle</string>
+    <string name="pref_summary_rx_tx_audio_icon">Mainkan suara ketika tombol PTT ditekan</string>
+    <string name="pref_title_vox_triggered_icon">Voice aktivasi otomatis</string>
+    <string name="pref_summary_vox_triggered_icon">Mainkan suara ketika suara aktivasi otomatis</string>
+    <string name="pref_title_personal_message_audio_icon">Pesan pribadi</string>
+    <string name="pref_summary_personal_message_audio_icon">Mainkan suara ketika menerima pesan pribadi</string>
+    <string name="pref_title_channel_message_audio_icon">Pesan saluran</string>
+    <string name="pref_summary_channel_message_audio_icon">Mainkan suara ketika menerima pesan saluran</string>
+    <string name="pref_title_broadcast_message_audio_icon">Pesan Broadcast</string>
+    <string name="pref_summary_broadcast_message_audio_icon">Mainkan suara ketika menerima Pesan broadcast</string>
+    <string name="pref_title_server_lost_audio_icon">Kehilangan koneksi server</string>
+    <string name="pref_summary_server_lost_audio_icon">Mainkan suara ketika koneksi terputus</string>
+    <string name="pref_title_files_update_audio_icon">Daftar File diperbarui</string>
+    <string name="pref_summary_files_update_audio_icon">Mainkan suara ketika menambahkan atau menghapus file</string>
+    <string name="pref_title_transmitready_icon">Modus eksklusif otomatis</string>
+    <string name="pref_summary_transmitready_icon">Mainkan suara ketika transmisi siap di "Tidak Ada Interupsi" saluran</string>
+    <string name="pref_header_connection">Koneksi</string>
+    <string name="pref_title_sub_txtmsg">Pesan Teks</string>
+    <string name="pref_summary_sub_txtmsg">Mengikuti  pesan teks dari pengguna</string>
+    <string name="pref_title_sub_chanmsg">Pesan saluran</string>
+    <string name="pref_summary_sub_chanmsg">Mengikuti pesan teks dari saluran</string>
+    <string name="pref_title_sub_bcastmsg">Pesan broadcast</string>
+    <string name="pref_summary_sub_bcastmsg">Mengikuti untuk pesan broadcast</string>
+    <string name="pref_title_sub_voice">Suara</string>
+    <string name="pref_summary_sub_voice">Mengikuti untuk stream suara</string>
+    <string name="pref_title_sub_video">Pengambilan Video</string>
+    <string name="pref_summary_sub_video">Mengikuti stream untuk pengambilan video</string>
+    <string name="pref_title_sub_desktop">Desktop</string>
+    <string name="pref_summary_sub_desktop">Mengikuti untuk stream desktop</string>
+    <string name="pref_title_sub_mediafile">Media File</string>
+    <string name="pref_summary_sub_mediafile">Mengikuti stream untuk Media File</string>
+    <string name="pref_header_tts">Suara Pembaca layar</string>
+    <string name="pref_title_server_login">Pengguna masuk ke server</string>
+    <string name="pref_summary_server_login">Mengumumkan  nama pengguna yang sedang masuk</string>
+    <string name="pref_title_server_logout">pengguna keluar dari server</string>
+    <string name="pref_summary_server_logout">Mengumumkan nama pengguna yang keluar</string>
+    <string name="pref_title_channel_join">Pengguna telah bergabung dengan saluran</string>
+    <string name="pref_summary_channel_join">Mengumumkan nama yang saat ini terhubung ke saluran</string>
+    <string name="pref_title_channel_leave">Pengguna telah meninggalkan saluran</string>
+    <string name="pref_summary_channel_leave">mengumumkan nama pengguna yang meninggalkan saluran</string>
+    <string name="pref_title_personal_message">Pesan pribadi</string>
+    <string name="pref_title_broadcast_message">Pesan Broadcast</string>
+    <string name="pref_summary_message">Mengumumkan nama pengirim</string>
+    <string name="pref_title_mute_speakers">Pengeras suara diam ketika menekan tombol PTT</string>
+    <string name="pref_summary_mute_speakers">Aktifkan ini untuk menghindari echo dari pengeras suara</string>
+    <string name="pref_title_show_usernames">Tampilkan nama pengguna</string>
+    <string name="pref_summary_show_usernames">tampilkan nama pengguna bukan nama panggilan</string>
+    <string name="pref_title_mediafile_volume">Media file volume</string>
+    <string name="pref_summary_mediafile_volume">Media file vs. Volume suara</string>
+    <string name="pref_title_speakerphone_checkbox">Mengaktifkan pengeras suara ponsel</string>
+    <string name="pref_summary_speakerphone_checkbox">beralih dari telinga ke pengeras suara</string>
+    <string name="pref_title_voice_processing_checkbox">Mengaktifkan suara preprocessing</string>
+    <string name="pref_summary_voice_processing_checkbox">Menggunakan echo cancellation dan otomatis gain control</string>
+    <string name="pref_title_public_servers">Tampilkan publik server</string>
+    <string name="pref_summary_public_servers">Termasuk semua server di Daftar Server</string>
+
+    <string name="text_tts_loggedin">telah masuk</string>
+    <string name="text_tts_loggedout">telah keluar</string>
+    <string name="text_tts_joined_chan">telah bergabung dengan saluran</string>
+    <string name="text_tts_left_chan">telah meninggalkan saluran</string>
+    <string name="text_tts_personal_message">Pesan pribadi dari pengguna %1$s</string>
+    <string name="text_tts_broadcast_message">Pesan Broadcast dari pengguna %1$s</string>
+    <string name="pref_header_soundsystem">Suara sistem</string>
+    <string name="title_activity_audio_codec">Codec Audio</string>
+    <string name="title_activity_filepicker">Seleksi Berkas</string>
+    <string name="title_section_opus">OPUS</string>
+    <string name="title_section_speex">Speex</string>
+    <string name="title_section_speexvbr">Speex VBR</string>
+    <string name="title_section_noaudio">Tidak ada suara</string>
+    <string name="opus_application">Aplekasi</string>
+    
+    <string name="button_tx">PTT</string>
+    <string name="button_remove">Hapus</string>
+    <string name="button_edit">Edit</string>
+    <string name="action_ban">melarang</string>
+    <string name="action_edit">Edit Saluran</string>
+    <string name="action_join">Gabung</string>
+    <string name="action_kick">Tendang</string>
+    <string name="action_move">Pindah Ke Sini</string>
+    <string name="action_select">Pilih Untuk Dipindah</string>
+    <string name="action_upload">Unggah File</string>
+    <string name="button_msg">Pesan</string>
+    <string name="button_send">Kirim</string>
+
+    <string name="channel_prop_title_name">Nama</string>
+    <string name="channel_prop_title_topic">Topik</string>
+    <string name="channel_prop_title_password">Kata Sandi</string>
+    <string name="channel_prop_title_op_password">Kata Sandi Op</string>
+    <string name="channel_prop_title_maxusers">Maksimal pengguna</string>
+    <string name="channel_prop_title_diskquota">Kuota Disk (KBytes)</string>
+    
+    <string name="channel_prop_title_permanent">Saluran Permanen</string>
+    <string name="channel_prop_title_nointerrupt">Tidak Ada Interupsi</string>
+    <string name="channel_prop_title_classroom">Ruang Kelas</string>
+    <string name="channel_prop_title_oprecvonly">Hanya menerima Operator</string>
+    <string name="channel_prop_title_novoiceact">Tidak ada Suara aktivasi</string>
+    <string name="channel_prop_title_noaudiorecord">Tidak Merekam Suara</string>
+    
+
+    <string name="user_prop_title_username">Nama Pengguna</string>
+    <string name="user_prop_title_clientname">Nama Klien</string>
+    <string name="user_prop_title_voice_volume">Volume Suara</string>
+    <string name="user_prop_title_mute_voice">Bisukan Suara</string>
+    <string name="user_prop_title_media_volume">File Media Volume</string>
+    <string name="user_prop_title_mute_media">Bisukan Media File</string>
+
+    <string name="label_connection">Koneksi:</string>
+    <string name="stat_online">Online</string>
+    <string name="stat_offline">Offline</string>
+    <string name="stat_connecting">Menghubungkan</string>
+    <string name="label_voice">Suara:</string>
+    <string name="label_desktop">Desktop:</string>
+    <string name="label_ping">Ping:</string>
+    <string name="label_rxtx">RX/TX:</string>
+    <string name="label_total">Total:</string>
+    <string name="label_mediafile">Media File:</string>
+    <string name="default_">Standar</string>
+
+    <string name="server_list_empty">TeamTalk 5 nol Daftar Server</string>
+    <string name="no_nickname">Tidak ada nama panggilan</string>
+    <string name="message_text">Pesan Teks</string>
+    <string name="time_date">Waktu Dan Tanggal</string>
+    <string name="name">Nama</string>
+
+    <string name="err_init_sound_input">Gagal untuk menginisialisasi perangkat input suara</string>
+    <string name="err_init_sound_output">Gagal untuk menginisialisasi perangkat output suara</string>
+    <string name="err_retrieve_public_server_list">Gagal untuk mengambil daftar server publik</string>
+    <string name="err_send_text_message">Gagal untuk mengirim pesan teks</string>
+    <string name="err_connection">Koneksi gagal</string>
+    <string name="err_facebooklogin">Gagal Masuk Ke Facebook</string>
+
+    <string name="action_new_channel">Buat saluran baru</string>
+    <string name="action_save">Simpan</string>
+    <string name="action_connect">Hubungkan</string>
+    <string name="action_new_server">Server Baru</string>
+    <string name="action_refresh">Segarkan</string>
+    <string name="action_import_serverlist">mengimpor dari file</string>
+
+    <string name="pref_title_server_props">TeamTalk 5 Server Properti</string>
+    <string name="pref_title_server_info">Informasi Server</string>
+    <string name="pref_title_server_name">Nama Server</string>
+    <string name="pref_title_server_address">Nama Domain atau alamat IP</string>
+    <string name="pref_title_tcp_port">TCP Port</string>
+    <string name="pref_title_udp_port">UDP Port</string>
+    <string name="pref_title_encription">Dienkripsi</string>
+    <string name="pref_title_authentication">Otentikasi</string>
+    <string name="pref_title_username">Nama pengguna</string>
+    <string name="pref_title_password">Kata sandi</string>
+    <string name="pref_title_facebook">Masuk Ke Facebook</string>
+    <string name="pref_title_join_channel">Gabung saluran</string>
+    <string name="pref_title_channel">Saluran</string>
+    <string name="pref_title_channel_password">Kata sandi saluran</string>
+    <string name="pref_title_last_channel">Saluran terakhhir digabung</string>
+
+    <string name="pref_summary_server_name">Server ini akan muncul dengan nama ini di Server Daftar</string>
+    <string name="pref_summary_server_address">Nama domain atau alamat IP dari server</string>
+
+    <string name="channel_password_prompt">Masukan kata sandi saluran</string>
+    <string name="button_download">Unduh</string>
+    <string name="download_succeeded">File %1$s telah berhasil diunduh dan disimpan di %2$s</string>
+    <string name="download_failed">Gagal untuk mengunduh file %1$s</string>
+    <string name="upload_succeeded">File %1$s telah berhasil diunggah</string>
+    <string name="upload_failed">Gagal untuk mengunggah file %1$s</string>
+    <string name="alert_file_override">File %1$s telah ada, apakah anda ingin menggantinya?</string>
+    <string name="err_file_delete">tidak dapat menghapus file %1$s</string>
+    <string name="err_channel_remove">Tidak dapat menghapus saluran %1$s</string>
+    <string name="err_download_path">Tempat Pengunduhan %1$s tidak tersedia</string>
+    <string name="download_progress">%1$d%% terunduh</string>
+    <string name="upload_progress_title">Mengungah %1$s</string>
+    <string name="upload_progress">%1$d%%, Klik untuk membatalkan</string>
+    <string name="upload_started">Pengunggahan Telah Dimulai</string>
+    <string name="transfer_stopped">Transfer telah terhenti</string>
+    <string name="complete">Selesai</string>
+    <string name="remote_file_exists">File %1$s ini telah ada di server dan saluran ini</string>
+    <string name="remote_file_remove_confirmation">Apakah anda yakin ingin menghapus file %1$s dari server ini?</string>
+    <string name="server_remove_confirmation">Apakah anda yakin ingin menghapus %1$s dari daftar server?</string>
+    <string name="channel_remove_confirmation">anda yakin ingin menghapus saluran %1$s?</string>
+    <string name="version_update">TeamTalk versi baru telah tersedia: %1$s?</string>
+    <string name="decvolume">Kurangi volume</string>
+    <string name="incvolume">Tingkatkan volume</string>
+    <string name="speaker_mute">Diamkan Pengeras Suara</string>
+    <string name="speaker_unmute">Bunyikan Pengeras Suara</string>
+    <string name="mic_mute">Matikan microphone</string>
+    <string name="mic_unmute">Hidupkan microphone</string>
+    <string name="decgain">Kurangi volume microphone gain</string>
+    <string name="incgain">Tingkatkan volume microphone gain</string>
+
+    <string name="speaker_volume_description">Pengeras suara %1$s</string>
+    <string name="mic_gain_description">Volume Microphone: %1$s</string>
+
+    <string name="voice_activation_on">Hidupkan aktivasi suara</string>
+    <string name="voice_activation_off">Matikan aktivasi suara</string>
+    <string name="decvoxlevel">Kurangi tingkat aktivasi suara</string>
+    <string name="incvoxlevel">Tingkatkan tingkat aktivasi suara</string>
+    <string name="vox_level_description">Tingkat aktivasi suara %1$s</string>
+
+    <string name="text_samplerate">Tingkat sample</string>
+    <string name="text_ignore_silence">Mengabaikan diam (DTX)</string>
+    <string name="text_audchan">Saluran audio</string>
+    <string name="text_bitrate">Bitrate</string>
+    <string name="text_maxbitrate">Bitrate Maksimal</string>
+    <string name="text_txinterval">Mengirimkan Selang</string>
+    <string name="text_quality">Kualitas</string>
+    <string name="text_publicserver">Publik server</string>
+    <string name="text_localserver">Lokal server</string>
+    <string name="text_passwdprot">Terlindung Sandi</string>
+    <string name="text_translator">terjemahan dari: Anak Negeri</string>
+    <string name="desktop_image">Gambar desktop</string>
+    <string name="channel_change_alert">Semua transfer aktif akan terhenti ketika beralih saluran</string>
+    <string name="disconnect_alert">Semua transfer aktif akan terhenti ketika meninggalkan server</string>
+
+    <string name="err_invalid_username">Nama Pengguna Tidak Sah</string>
+    <string name="err_incorrect_server_password">Sandi Server Salah</string>
+    <string name="err_incorrect_channel_password">Sandi Saluran Salah</string>
+    <string name="err_invalid_account"Akun Tidak Sah></string>
+    <string name="err_max_server_users_exceeded">Server Penuh</string>
+    <string name="err_max_channel_users_exceeded">Saluran Penuh</string>
+    <string name="err_server_banned">Alamat IP anda telah dilarang</string>
+    <string name="err_not_authorized">Tidak diizinkan</string>
+    <string name="err_max_diskusage_exceeded">Tidak ada cukup ruang tersisa</string>
+    <string name="err_incorrect_op_password">Sandi operator salah</string>
+    <string name="err_max_logins_per_ipaddress_exceeded">Terlalu banyak koneksi dari satu alamat IP</string>
+    <string name="err_max_channels_exceeded">Saluran Penuh</string>
+    <string name="err_channel_already_exists">Saluran sudah ada</string>
+    <string name="err_user_not_found">Nama pengguna tidak ditemukan</string>
+    <string name="err_openfile_failed">Server gagal membuka file</string>
+    <string name="err_filesharing_disabled">Server tidak mengizinkan file transfer</string>
+    <string name="err_channel_has_users">Tidak ada tempat di saluran ini</string>
+
+    <string name="personal_message_notification">pesan baru dari pengguna %1$s</string>
+    <string name="personal_message_notification_hint">Klik untuk membaca dan membalasnya</string>
+    <string name="user_state_now_speaking">%1$s berbicara</string>
+    <string name="text_waitstream">menunggu untuk vidio stream</string>
+    <string name="text_desktop_session">Desktop session</string>
+    <string name="text_webcam_session">Webcam session</string>
+    <string name="text_mediafile_session">Media file session</string>
+
+    <string name="permission_audioinput">Perekam dan pemutar akan tidak tersedia</string>
+    <string name="permission_audiomodify">Perekam dan pemutar akan tersedia</string>
+    <string name="permission_filerx">Pengunduhan files akan tidak tersedia</string>
+    <string name="permission_filetx">Pengunggahan dan pengimporan files akan tidak tersedia</string>
+    <string name="permission_internet">Klien akan tidak dapat terhubung ke server</string>
+    <string name="permission_vibrate">Bergetar saat tahan dan bicara akan tidak tersedia</string>
+    <string name="permission_wake_lock">Koneksi ke server bisa hilang ketika layar meredup</string>
+    <string name="permission_read_phone_state">Deteksi panggilan masuk akan tidak memungkinkan</string>
+
+    <string name="facebook_app_id">611833262539381</string>
+    <string name="fb_login_protocol_scheme">fb611833262539381</string>
+
+</resources>
